--- a/Cineview/app/src/main/res/values/strings.xml
+++ b/Cineview/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="app_name">Cineview</string>
+    <string name="content_description_movie_backdrop">Movie Backdrop</string>
+    <string name="tab_item_1_movie_frag">Elenco</string>
+    <string name="tab_item_2_movie_frag">Mais Detalhes</string>
+    <string name="release_date_movie_frag">Data de Lançamento:</string>
+    <string name="runtime_movie_frag">Duração do Filme:</string>
 </resources>
