Update Layout Home Frag

--- a/Cineview/app/src/main/res/values/strings.xml
+++ b/Cineview/app/src/main/res/values/strings.xml
@@ -32,5 +32,8 @@
     <string name="bottom_nav_item_search">Buscar</string>
     <string name="bottom_nav_item_favorite">Favoritos</string>
     <string name="bottom_nav_item_account">Conta</string>
+    <string name="home_frag_trend_movie_day">Top Filmes do Dia</string>
+    <string name="home_frag_trend_movie_week">Top Filmes da Semana</string>
+    <string name="home_frag_trend_tv_day">Top Séries do Dia</string>
 
 </resources>
