--- a/Cineview/app/src/main/res/values/strings.xml
+++ b/Cineview/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
 
     <string name="home_frag_now_playing">Em cartaz</string>
     <string name="home_frag_top_rated">Melhores Avaliados</string>
-    <string name="home_frag_popular">Mais Votados</string>
+    <string name="home_frag_popular">Mais Visualizados</string>
     <string name="home_frag_trending">Tendências da Semana</string>
 
     <string name="share_message">Estava dando uma olhada nas informações do filme \"%s\" através do Cineview, o melhor app de informações sobre filmes do mundo \uD83D\uDE03 Nunca ouviu falar dele?? Tá perdendo tempo ein \uD83D\uDE43\nAcesse o link e baixe agora mesmo: https://play.google.com/store/apps/developer?id=Digital+House+Brasil</string>
