--- a/Cineview/app/src/main/res/values/strings.xml
+++ b/Cineview/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <string name="error_default">Erro desconhecido, tente novamente.</string>
     <string name="error_favorite">Sem conexão no momoento…\nNão foi possível completar a ação!</string>
+    <string name="error_login">Não possível se conectar com o %s.</string>
 
     <string name="tab_item_1_movie_frag">Elenco</string>
     <string name="tab_item_2_movie_frag">Mais Detalhes</string>
@@ -42,4 +43,6 @@
     <string name="home_frag_trending">Tendências da Semana</string>
 
     <string name="share_message">Estava dando uma olhada nas informações do filme \"%s\" através do Cineview, o melhor app de informações sobre filmes do mundo \uD83D\uDE03 Nunca ouviu falar dele?? Tá perdendo tempo ein \uD83D\uDE43\nAcesse o link e baixe agora mesmo: https://play.google.com/store/apps/developer?id=Digital+House+Brasil</string>
+
+    <string name="facebook_app_id">2075326055965433</string>
 </resources>
